<resources>
    <string name="app_name">forum android app</string>
    <string name="continue_login">Continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in_to_forum">Log in to forum</string>
    <string name="create_an_account">Create an account</string>
    <string name="email">Email</string>
    <string name="already_signed_up">Already signed up?</string>
    <string name="do_not_have_an_account">Don\'t have an account?</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="an_interesting_title">An interesting title</string>
    <string name="your_text_post">Your text post (optional)</string>
    <string name="post">Post</string>
    <string name="text_post">Text post</string>
    <string name="edit">Edit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="display_name_optional">Display name (optional)</string>
    <string name="shown_on_your_profile_page">Shown on your profile page</string>
    <string name="this_will_be_displayed_on_your_profile_page">This will be displayed to views of your profile page on and does not change your username.</string>
    <string name="about">About</string>
    <string name="a_little_description_of_yourself">A little description of yourself</string>
    <string name="save">Save</string>
    <string name="no_posts">No posts...</string>
    <string name="home">Home</string>
    <string name="log_out">Log out</string>
    <string name="randomize">Randomize</string>
</resources>